tests/baselines/reference/structConstructorOverloadsWithDefaultValues.errors.txt
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorOverloadsWithDefaultValues.ts(6,17): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorOverloadsWithDefaultValues.ts (1 errors) ====
    // doc 3.1
    // A parameter initializer is only allowed in a function or constructor implementation
    
    struct C {
        foo: string;
        constructor(x = 1); // error
                    ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        constructor() {
        }
    }
    
    struct D {
    	foo: string;
    	constructor();
    	constructor(x = 1) { // ok
    	}
    }
    
    /* struct D<T> {
        foo: string;
        constructor(x = 1); // error
        constructor() {
        }
    } */